--- a/TDL.html
+++ b/TDL.html
@@ -32,47 +32,40 @@
             z-index: -1;
         }
 
-        h1 {
-            font-size: 2em;
+        h1,
+        #taskListTitle,
+        #doneListTitle {
+            font-size: 1.2em;
             font-weight: bold;
-            text-align: center;
-            animation: moveUp 1.5s ease-in-out;
+            margin-bottom: 5px;
             color: #e69ab3;
-            margin-top: 20px;
-            z-index: 1;
+            text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
         }
 
-        @keyframes moveUp {
-            0% {
-                opacity: 0;
-                transform: translateY(-50px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        h1 {
+            font-size: 1.5em;
+            margin-top: 10px;
         }
 
         main {
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            width: 80%;
-            margin: 20px auto;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin: 10px 0;
             overflow-x: auto;
         }
 
         form {
-            max-width: 400px;
+            max-width: 100%;
             width: 100%;
             background: rgba(105, 196, 212, 0.5);
-            padding: 20px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgb(238, 251, 253);
             position: relative;
             z-index: 1;
-            margin-right: 20px;
+            margin-bottom: 10px;
         }
 
         label {
@@ -84,13 +77,13 @@
         input,
         select {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
+            padding: 8px;
+            margin-bottom: 10px;
             box-sizing: border-box;
             border: 1px solid #ffffff;
             border-radius: 4px;
-            color: #ffffff; 
-            background-color: transparent; 
+            color: #ffffff;
+            background-color: transparent;
         }
 
         button {
@@ -108,23 +101,9 @@
             color: #ffffff;
         }
 
-        .taskItem button {
-            color: #e69ab3; 
-            background-color: transparent;
-            border: 1px solid #e69ab3;
-            padding: 8px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .taskItem button:hover {
-            background-color: #e69ab3;
-            color: #ffffff; 
-        }
-
+        .taskItem button,
         #doneList .taskItem button {
-            color: #e69ab3; 
+            color: #e69ab3;
             background-color: transparent;
             border: 1px solid #e69ab3;
             padding: 8px 15px;
@@ -133,6 +112,7 @@
             transition: background-color 0.3s ease;
         }
 
+        .taskItem button:hover,
         #doneList .taskItem button:hover {
             background-color: #e69ab3;
             color: #ffffff;
@@ -140,39 +120,31 @@
 
         #doneList .taskItem button.trash:hover {
             background-color: #e69ab3;
-            color: #e69ab3; 
+            color: #e69ab3;
         }
 
         #taskListContainer,
         #doneListContainer {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            width: 48%;
-        }
-
-        #taskListTitle,
-        #doneListTitle {
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #e69ab3;
+            width: 100%;
         }
 
         #taskList,
         #doneList {
             overflow-y: auto;
             background: rgba(105, 196, 212, 0.5);
-            padding: 20px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgb(255, 250, 250);
-            margin: 0 20px;
+            margin: 0;
             color: #e69ab3;
         }
 
-        .taskItem {
+        .taskItem,
+        #doneList .taskItem {
+            width: 100%;
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
+            justify-content: center;
             align-items: center;
             margin-bottom: 10px;
             padding: 10px;
@@ -181,23 +153,35 @@
         }
 
         #doneList .taskItem {
-            padding: 10px;
-            margin-bottom: 10px;
             background-color: rgba(255, 235, 235, 0.8);
         }
-        h1,
-        #taskListTitle,
-        #doneListTitle {
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #e69ab3;
-            text-shadow: 0 0 5px rgba(255, 255, 255, 0.7); /* Add a white text shadow */
-            padding: 10px; /* Optional: Add padding for better spacing */
-            border-radius: 8px; /* Optional: Add border-radius for rounded corners */
+
+        @media only screen and (max-width: 600px) {
+            h1,
+            #taskListTitle,
+            #doneListTitle {
+                font-size: 1.5em;
+            }
+
+            form {
+                padding: 8px;
+            }
+
+            input,
+            select {
+                padding: 6px;
+                margin-bottom: 8px;
+            }
+
+            button {
+                padding: 6px 12px;
+            }
+
+            .taskItem button,
+            #doneList .taskItem button {
+                padding: 6px 12px;
+            }
         }
-
-
     </style>
 </head>
 
@@ -227,7 +211,6 @@
             <div id="doneList"></div>
         </div>
 
-
         <button type="button" onclick="clearAllTasks()">Clear All Tasks</button>
     </main>
 
@@ -236,7 +219,6 @@
             loadTasks();
             setInterval(updateTaskOrder, 60000);
         });
-
 
         window.addEventListener('beforeunload', function () {
             saveTasks();
@@ -274,14 +256,12 @@
             var trashButton = document.createElement('button');
             trashButton.textContent = 'Trash';
             trashButton.onclick = function () {
-
                 doneList.removeChild(taskItem);
                 saveTasks();
             };
 
             taskItem.appendChild(trashButton);
             doneList.appendChild(taskItem);
-
 
             saveTasks();
             sortTasksByDeadline();
@@ -358,7 +338,6 @@
                 task.style.order = index + 1;
             });
         }
-
 
         function changeFontColor(element) {
             element.style.color = '#f3bae5';
