--- a/TDL.html
+++ b/TDL.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
     <style>
@@ -32,19 +32,27 @@
             z-index: -1;
         }
 
-        h1,
-        #taskListTitle,
-        #doneListTitle {
-            font-size: 1.2em;
+        h1 {
+            font-size: 2em;
             font-weight: bold;
-            margin-bottom: 5px;
+            text-align: center;
             color: #e69ab3;
-            text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
+            margin-top: 20px;
+            z-index: 1;
+            animation: moveUp 1.5s ease-in-out;
+            animation-fill-mode: both;
         }
 
-        h1 {
-            font-size: 1.5em;
-            margin-top: 10px;
+        @keyframes moveUp {
+            from {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         main {
@@ -53,7 +61,7 @@
             align-items: center;
             width: 100%;
             margin: 10px 0;
-            overflow-x: auto;
+            overflow-y: auto; /* Enable vertical scrolling */
         }
 
         form {
@@ -187,7 +195,7 @@
 
 <body>
     <header>
-        <h1>Welcome cess!</h1>
+        <h1 style="animation: moveUp 1.5s ease-in-out;">Welcome cess!</h1>
     </header>
 
     <main>
