--- a/TDL.html
+++ b/TDL.html
@@ -316,7 +316,7 @@
         }
 
         function clearAllTasks() {
-            var confirmation = confirm('Are you sure you want to clear all tasks?');
+            var confirmation = confirm('opss! be careful, you sure you want to clear all tasks? ');
             if (confirmation) {
                 localStorage.clear();
 
